Fix z-index of ModalCanvas.

--- a/styles/_modal-canvas.scss
+++ b/styles/_modal-canvas.scss
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
+  z-index: 2;
 }
 
 .sc-modal-canvas.sm-hidden {
